sqlanywhere-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__conflicting_data_migration-2.snap
---
source: sqlanywhere-server/tests/namespaces/shared_schema.rs
expression: "check_data(\"schema\").await"
---
[
    "Row { cols: [Col { name: Some(\"c\"), decltype: None }], inner: [Integer { value: 42 }] }",
]
