sqlanywhere-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__conflicting_data_migration-3.snap
---
source: sqlanywhere-server/tests/namespaces/shared_schema.rs
expression: "schema_conn.execute(\"create unique index idx on test (c)\",\n            ()).await.unwrap_err()"
---
Hrana(
    StreamError(
        Error {
            message: "Schema migration error: migration dry run failed: task 3 for namespace `ns1` failed with error: An error occured executing the migration at step 1: UNIQUE constraint failed: test.c",
            code: "SCHEMA_MIGRATION_ERROR",
        },
    ),
)
