sqlanywhere-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__disable_ddl-2.snap
---
source: sqlanywhere-server/tests/namespaces/shared_schema.rs
expression: "conn.execute(\"create table test (x)\", ()).await.unwrap()"
---
0
