sqlanywhere-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__dry_run_failure.snap
---
source: sqlanywhere-server/tests/namespaces/shared_schema.rs
expression: "schema_conn.execute_batch(\"create table test2 (c NOT NULL); insert into test2 select * from test\").await.unwrap_err()"
---
Hrana(
    StreamError(
        Error {
            message: "Schema migration error: migration dry run failed: task 3 for namespace `ns1` failed with error: An error occured executing the migration at step 2: NOT NULL constraint failed: test2.c",
            code: "SCHEMA_MIGRATION_ERROR",
        },
    ),
)
